INDIGO-290 Fix loader bg on firefox.

--- a/war/src/main/webapp/engines/jahia-anthracite/_components.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_components.scss
@@ -3508,7 +3508,7 @@ body[data-indigo-gwt-side-panel="open"] {
 	}
 
 	.x-progress-inner {
-		background-color: #eeeeee;
+		background-color: transparent;
 	}
 
 	.x-progress-bar {
